--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "scripts": {
     "dev": "nodemon app.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "test": "nodemon src/index.js",
     "start": "node src/index.js"
   },
