--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "test": "nodemon src/index.js",
-    "start": "node src/index.js"
+    "test": "nodemon src/app.js",
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
